k8s/namespaces/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
      name: sonarr-ui
  type: ClusterIP
