k8s/namespaces/media/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-https
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: authentik
          namespace: ingress
      services:
        - name: sonarr
          port: 8989
  tls: 
    secretName: oglesby-io-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-http
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: redirect-https
          namespace: ingress
      services:
        - name: sonarr
          port: 8989
